source/ANTLR/PuppetGrammarParser.java
// Generated from PuppetGrammar.g4 by ANTLR 4.5
package ANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PuppetGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		NOT=25, AND=26, OR=27, EQ=28, NEQ=29, LT=30, GT=31, LE=32, GE=33, REGMATCH=34, 
		REGNONMATCH=35, IN=36, PLUS=37, SUB=38, DIV=39, MULT=40, MOD=41, LEFTSHIFT=42, 
		RIGHTSHIFT=43, INT=44, FLOAT=45, BOOLEAN=46, RESOURCE_TYPE=47, IDENTIFIER=48, 
		STRING_LITERAL=49, COMMENT=50, WS=51;
	public static final int
		RULE_puppetAssignment = 0, RULE_puppetAttributeBody = 1, RULE_puppetAttributeValue = 2, 
		RULE_puppetCase = 3, RULE_puppetCaseBody = 4, RULE_puppetCaseElement = 5, 
		RULE_puppetClass = 6, RULE_puppetClassDecl = 7, RULE_puppetClassInherits = 8, 
		RULE_puppetClassName = 9, RULE_puppetCustomSkip = 10, RULE_puppetCustomScope = 11, 
		RULE_puppetCustomScopeSpec = 12, RULE_puppetDefinedResDecl = 13, RULE_puppetDefinedResType = 14, 
		RULE_puppetIf = 15, RULE_puppetIfContinuation = 16, RULE_puppetInclude = 17, 
		RULE_puppetLocalVariable = 18, RULE_puppetNode = 19, RULE_puppetNodeSpecs = 20, 
		RULE_puppetParameter = 21, RULE_puppetParaSeq = 22, RULE_puppetProgram = 23, 
		RULE_puppetProgramElement = 24, RULE_puppetQualifiedVariable = 25, RULE_puppetResource = 26, 
		RULE_puppetScope = 27, RULE_puppetSelectorBody = 28, RULE_puppetSelectorElement = 29, 
		RULE_puppetStatements = 30, RULE_puppetStatementElement = 31, RULE_puppetUnless = 32, 
		RULE_puppetValue = 33, RULE_puppetValueExp = 34, RULE_puppetVariable = 35;
	public static final String[] ruleNames = {
		"puppetAssignment", "puppetAttributeBody", "puppetAttributeValue", "puppetCase", 
		"puppetCaseBody", "puppetCaseElement", "puppetClass", "puppetClassDecl", 
		"puppetClassInherits", "puppetClassName", "puppetCustomSkip", "puppetCustomScope", 
		"puppetCustomScopeSpec", "puppetDefinedResDecl", "puppetDefinedResType", 
		"puppetIf", "puppetIfContinuation", "puppetInclude", "puppetLocalVariable", 
		"puppetNode", "puppetNodeSpecs", "puppetParameter", "puppetParaSeq", "puppetProgram", 
		"puppetProgramElement", "puppetQualifiedVariable", "puppetResource", "puppetScope", 
		"puppetSelectorBody", "puppetSelectorElement", "puppetStatements", "puppetStatementElement", 
		"puppetUnless", "puppetValue", "puppetValueExp", "puppetVariable"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "','", "'=>'", "'case'", "'{'", "'}'", "':'", "'class'", 
		"'inherits'", "'::'", "'skip'", "'scope'", "'('", "')'", "'define'", "'if'", 
		"'elsif'", "'else'", "'include'", "'$'", "'node'", "'default'", "'unless'", 
		"'?'", "'!'", "'and'", "'or'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
		"'=~'", "'!~'", "'in'", "'+'", "'-'", "'/'", "'*'", "'%'", "'<<'", "'>>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "NOT", "AND", "OR", "EQ", "NEQ", "LT", "GT", "LE", "GE", "REGMATCH", 
		"REGNONMATCH", "IN", "PLUS", "SUB", "DIV", "MULT", "MOD", "LEFTSHIFT", 
		"RIGHTSHIFT", "INT", "FLOAT", "BOOLEAN", "RESOURCE_TYPE", "IDENTIFIER", 
		"STRING_LITERAL", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PuppetGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PuppetGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PuppetAssignmentContext extends ParserRuleContext {
		public PuppetLocalVariableContext puppetLocalVariable() {
			return getRuleContext(PuppetLocalVariableContext.class,0);
		}
		public PuppetValueExpContext puppetValueExp() {
			return getRuleContext(PuppetValueExpContext.class,0);
		}
		public PuppetAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetAssignmentContext puppetAssignment() throws RecognitionException {
		PuppetAssignmentContext _localctx = new PuppetAssignmentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_puppetAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			puppetLocalVariable();
			setState(73);
			match(T__0);
			setState(74);
			puppetValueExp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetAttributeBodyContext extends ParserRuleContext {
		public List<PuppetAttributeValueContext> puppetAttributeValue() {
			return getRuleContexts(PuppetAttributeValueContext.class);
		}
		public PuppetAttributeValueContext puppetAttributeValue(int i) {
			return getRuleContext(PuppetAttributeValueContext.class,i);
		}
		public PuppetAttributeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetAttributeBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetAttributeBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetAttributeBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetAttributeBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetAttributeBodyContext puppetAttributeBody() throws RecognitionException {
		PuppetAttributeBodyContext _localctx = new PuppetAttributeBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_puppetAttributeBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			puppetAttributeValue();
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					match(T__1);
					setState(78);
					puppetAttributeValue();
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(85);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(84);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetAttributeValueContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PuppetGrammarParser.IDENTIFIER, 0); }
		public PuppetValueExpContext puppetValueExp() {
			return getRuleContext(PuppetValueExpContext.class,0);
		}
		public PuppetAttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetAttributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetAttributeValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetAttributeValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetAttributeValueContext puppetAttributeValue() throws RecognitionException {
		PuppetAttributeValueContext _localctx = new PuppetAttributeValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_puppetAttributeValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(IDENTIFIER);
			setState(88);
			match(T__2);
			setState(89);
			puppetValueExp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetCaseContext extends ParserRuleContext {
		public PuppetValueExpContext puppetValueExp() {
			return getRuleContext(PuppetValueExpContext.class,0);
		}
		public PuppetCaseBodyContext puppetCaseBody() {
			return getRuleContext(PuppetCaseBodyContext.class,0);
		}
		public PuppetCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetCase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetCaseContext puppetCase() throws RecognitionException {
		PuppetCaseContext _localctx = new PuppetCaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_puppetCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__3);
			setState(92);
			puppetValueExp(0);
			setState(93);
			match(T__4);
			setState(94);
			puppetCaseBody();
			setState(95);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetCaseBodyContext extends ParserRuleContext {
		public List<PuppetCaseElementContext> puppetCaseElement() {
			return getRuleContexts(PuppetCaseElementContext.class);
		}
		public PuppetCaseElementContext puppetCaseElement(int i) {
			return getRuleContext(PuppetCaseElementContext.class,i);
		}
		public PuppetCaseBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetCaseBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetCaseBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetCaseBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetCaseBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetCaseBodyContext puppetCaseBody() throws RecognitionException {
		PuppetCaseBodyContext _localctx = new PuppetCaseBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_puppetCaseBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				puppetCaseElement();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING_LITERAL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetCaseElementContext extends ParserRuleContext {
		public PuppetValueContext puppetValue() {
			return getRuleContext(PuppetValueContext.class,0);
		}
		public PuppetStatementsContext puppetStatements() {
			return getRuleContext(PuppetStatementsContext.class,0);
		}
		public PuppetCaseElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetCaseElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetCaseElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetCaseElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetCaseElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetCaseElementContext puppetCaseElement() throws RecognitionException {
		PuppetCaseElementContext _localctx = new PuppetCaseElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_puppetCaseElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			puppetValue();
			setState(103);
			match(T__6);
			setState(104);
			match(T__4);
			setState(107);
			switch (_input.LA(1)) {
			case T__3:
			case T__7:
			case T__10:
			case T__11:
			case T__12:
			case T__15:
			case T__18:
			case T__19:
			case T__22:
			case NOT:
			case INT:
			case FLOAT:
			case BOOLEAN:
			case RESOURCE_TYPE:
			case IDENTIFIER:
			case STRING_LITERAL:
				{
				setState(105);
				puppetStatements();
				}
				break;
			case T__5:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(109);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetClassContext extends ParserRuleContext {
		public PuppetClassNameContext puppetClassName() {
			return getRuleContext(PuppetClassNameContext.class,0);
		}
		public PuppetStatementsContext puppetStatements() {
			return getRuleContext(PuppetStatementsContext.class,0);
		}
		public PuppetParaSeqContext puppetParaSeq() {
			return getRuleContext(PuppetParaSeqContext.class,0);
		}
		public PuppetClassInheritsContext puppetClassInherits() {
			return getRuleContext(PuppetClassInheritsContext.class,0);
		}
		public PuppetClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetClassContext puppetClass() throws RecognitionException {
		PuppetClassContext _localctx = new PuppetClassContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_puppetClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__7);
			setState(112);
			puppetClassName();
			setState(114);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(113);
				puppetParaSeq();
				}
			}

			setState(117);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(116);
				puppetClassInherits();
				}
			}

			setState(119);
			match(T__4);
			setState(122);
			switch (_input.LA(1)) {
			case T__3:
			case T__7:
			case T__10:
			case T__11:
			case T__12:
			case T__15:
			case T__18:
			case T__19:
			case T__22:
			case NOT:
			case INT:
			case FLOAT:
			case BOOLEAN:
			case RESOURCE_TYPE:
			case IDENTIFIER:
			case STRING_LITERAL:
				{
				setState(120);
				puppetStatements();
				}
				break;
			case T__5:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(124);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetClassDeclContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(PuppetGrammarParser.STRING_LITERAL, 0); }
		public PuppetAttributeBodyContext puppetAttributeBody() {
			return getRuleContext(PuppetAttributeBodyContext.class,0);
		}
		public PuppetClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetClassDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetClassDeclContext puppetClassDecl() throws RecognitionException {
		PuppetClassDeclContext _localctx = new PuppetClassDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_puppetClassDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__7);
			setState(127);
			match(T__4);
			setState(128);
			match(STRING_LITERAL);
			setState(129);
			match(T__6);
			setState(130);
			puppetAttributeBody();
			setState(131);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetClassInheritsContext extends ParserRuleContext {
		public PuppetClassNameContext puppetClassName() {
			return getRuleContext(PuppetClassNameContext.class,0);
		}
		public PuppetClassInheritsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetClassInherits; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetClassInherits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetClassInherits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetClassInherits(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetClassInheritsContext puppetClassInherits() throws RecognitionException {
		PuppetClassInheritsContext _localctx = new PuppetClassInheritsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_puppetClassInherits);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__8);
			setState(134);
			puppetClassName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PuppetClassNameContext extends ParserRuleContext {
		public PuppetClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puppetClassName; }
	 
		public PuppetClassNameContext() { }
		public void copyFrom(PuppetClassNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PuppetClassNameScopedContext extends PuppetClassNameContext {
		public TerminalNode IDENTIFIER() { return getToken(PuppetGrammarParser.IDENTIFIER, 0); }
		public PuppetClassNameContext puppetClassName() {
			return getRuleContext(PuppetClassNameContext.class,0);
		}
		public PuppetClassNameScopedContext(PuppetClassNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetClassNameScoped(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetClassNameScoped(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetClassNameScoped(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PuppetClassNameEndContext extends PuppetClassNameContext {
		public TerminalNode IDENTIFIER() { return getToken(PuppetGrammarParser.IDENTIFIER, 0); }
		public PuppetClassNameEndContext(PuppetClassNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).enterPuppetClassNameEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PuppetGrammarListener ) ((PuppetGrammarListener)listener).exitPuppetClassNameEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PuppetGrammarVisitor ) return ((PuppetGrammarVisitor<? extends T>)visitor).visitPuppetClassNameEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PuppetClassNameContext puppetClassName() throws RecognitionException {
		PuppetClassNameContext _localctx = new PuppetClassNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_puppetClassName);
		try {
			setState(140);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
